// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`types a basic model 1`] = `
"interface AccountSchema extends ResultRecord {
    email: string;
    name: string;
}
export type Account = AccountSchema;
export type Accounts = Array<AccountSchema> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a summary 1`] = `
"/**
 * A user account.
 */
interface AccountSchema extends ResultRecord {
    email: string;
    name: string;
}
/**
 * A user account.
 */
export type Account = AccountSchema;
/**
 * A user account.
 */
export type Accounts = Array<AccountSchema> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a link field 1`] = `
"interface AccountSchema extends ResultRecord {
    email: string;
    name: string;
}
export type Account = AccountSchema;
export type Accounts = Array<AccountSchema> & {
    moreBefore?: string;
    moreAfter?: string;
};
interface PostSchema extends ResultRecord {
    author: AccountSchema | unknown;
    title: string;
}
export type Post = PostSchema;
export type  = Array<PostSchema> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a link field that does not exist 1`] = `
"interface AccountSchema extends ResultRecord {
    email: string;
    latestPost: unknown | unknown;
    name: string;
}
export type Account = AccountSchema;
export type Accounts = Array<AccountSchema> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;
